refactor: changes in routing

--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -6,17 +6,21 @@
   </head>
   <body>
     <section class="header">
-      <nav>
-        <div id="navbar">
-          <ul>
-            <li><a href="project2.html">HOME</a></li>
-            <li><a href="aboutus.html">ABOUT</a></li>
-            <li><a href="course.html">SPORTS</a></li>
-            <li><a href="blog.html">BLOG</a></li>
-            <li><a href="contact.html">CONTACT US</a></li>
-          </ul>
+      <div id="navbar">
+        <div>
+          {{#if user}}
+          <p>Wlecome {{user.name}}</p>
+          {{/if}}
         </div>
-      </nav>
+        <ul>
+          <li><a href="{{ auth_url }}">{{ auth }}</a></li>
+          <li><a href="/">HOME</a></li>
+          <li><a>ABOUT US</a></li>
+          <li><a href="/course">COURSE</a></li>
+          <li><a href="/blog">BLOG</a></li>
+          <li><a href="/contact">CONTACT US</a></li>
+        </ul>
+      </div>
       <div class="text-box">
         <h1>CONTACT US</h1>
         <p>This is one of the best coaching class in the whole Earth</p>
