--- a/views/aboutus.hbs
+++ b/views/aboutus.hbs
@@ -6,15 +6,19 @@
   </head>
   <body>
     <section class="sub-header">
-        <nav>
-          <div id="navbar">
-            <ul>
-              <li><a href="project2.html">HOME</a></li>
-              <li><a href="aboutus.html">ABOUT US</a></li>
-              <li><a href="contact.html">CONTACT US</a></li>
-            </ul>
-          </div>
-        </nav>
+      <div id="navbar">
+        <div>
+          {{#if user}}
+          <p>Wlecome {{user.name}}</p>
+          {{/if}}
+        </div>
+        <ul>
+          <li><a href="{{ auth_url }}">{{ auth }}</a></li>
+          <li><a href="/">HOME</a></li>
+          <li><a href="/about">ABOUT US</a></li>
+          <li><a href="/contact">CONTACT US</a></li>
+        </ul>
+      </div>
         <h1>ABOUT US</h1>
       </section>
     <section class="about-us">
