--- a/views/index.hbs
+++ b/views/index.hbs
@@ -17,7 +17,7 @@
         <ul>
           <li><a href="{{ auth_url }}">{{ auth }}</a></li>
           <li><a href="/">HOME</a></li>
-          <li><a>ABOUT US</a></li>
+          <li><a href="/about">ABOUT US</a></li>
           <li><a href="/contact">CONTACT US</a></li>
         </ul>
       </div>
