--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,7 +11,7 @@
       <div id="navbar">
         <div>
           {{#if user}}
-          <p>Wlecome {{user.name}}</p>
+          <p>Welcome {{user.name}}</p>
           {{/if}}
         </div>
         <ul>
