--- a/views/blog.hbs
+++ b/views/blog.hbs
@@ -9,7 +9,7 @@
        <div id="navbar">
         <div>
           {{#if user}}
-          <p>Wlecome {{user.name}}</p>
+          <p>Welcome {{user.name}}</p>
           {{/if}}
         </div>
         <ul>
