--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -25,7 +25,10 @@
     </section>
 
  <section class="location">
-    <iframe src="https://www.google.com/maps/place/K.+R.+Mangalam+University/@28.272428,77.0671828,17z/data=!3m1!4b1!4m6!3m5!1s0x390d25a4b2bc03f9:0x9f642d679654b239!8m2!3d28.272428!4d77.0697577!16s%2Fm%2F0zdn5fl?entry=ttu" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    {{!-- <iframe src="https://www.google.com/maps/place/K.+R.+Mangalam+University/@28.272428,77.0671828,17z/data=!3m1!4b1!4m6!3m5!1s0x390d25a4b2bc03f9:0x9f642d679654b239!8m2!3d28.272428!4d77.0697577!16s%2Fm%2F0zdn5fl?entry=ttu" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe> --}}
+    <a href="https://www.google.com/maps/place/K.+R.+Mangalam+University/@28.272428,77.0671828,17z/data=!3m1!4b1!4m6!3m5!1s0x390d25a4b2bc03f9:0x9f642d679654b239!8m2!3d28.272428!4d77.0697577!16s%2Fm%2F0zdn5fl?entry=ttu" target="_blank">
+      <img style="display:block; margin: auto;" src="/assets/location" alt="">
+    </a>
  </section>
  <section class="contact-us">
     <div class="row">
