--- a/views/blog.hbs
+++ b/views/blog.hbs
@@ -14,11 +14,11 @@
         </div>
         <ul>
           <li><a href="{{ auth_url }}">{{ auth }}</a></li>
-          <li><a href="/">HOME</a></li>
-          <li><a>ABOUT US</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a>About us</a></li>
           <li><a href="/course">COURSE</a></li>
           <li><a href="/blog">BLOG</a></li>
-          <li><a href="/contact">CONTACT US</a></li>
+          <li><a href="/contact">Contact us</a></li>
         </ul>
       </div>
         <h1>ONLINE COURSES FOR 2022</h1>
