--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -14,13 +14,13 @@
         </div>
         <ul>
           <li><a href="{{ auth_url }}">{{ auth }}</a></li>
-          <li><a href="/">HOME</a></li>
-          <li><a href="/about">ABOUT US</a></li>
-          <li><a href="/contact">CONTACT US</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="/about">About us</a></li>
+          <li><a href="/contact">Contact us</a></li>
         </ul>
       </div>
       <div class="text-box">
-        <h1>CONTACT US</h1>
+        <h1>Contact us</h1>
       </div>
     </section>
 
