--- a/views/contactus.html
+++ b/views/contactus.html
@@ -14,15 +14,15 @@
         </div>
         <ul>
           <li><a href="{{ auth_url }}">{{ auth }}</a></li>
-          <li><a href="/">HOME</a></li>
-          <li><a>ABOUT US</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a>About us</a></li>
           <li><a href="/course">COURSE</a></li>
           <li><a href="/blog">BLOG</a></li>
-          <li><a href="/contact">CONTACT US</a></li>
+          <li><a href="/contact">Contact us</a></li>
         </ul>
       </div>
       <div class="text-box">
-        <h1>CONTACT US</h1>
+        <h1>Contact us</h1>
         <p>This is one of the best coaching class in the whole Earth</p>
       </div>
     </section>
