--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,20 +5,22 @@
       crossorigin="anonymous"
     ></script>
     <title>Find NGO</title>
+    <link rel="shortcut icon" href="blob:https://web.whatsapp.com/0be9f2b0-a469-4083-873c-7b95e8266dc8" type="image/x-icon">
   </head>
   <body>
     <section class="header">
       <div id="navbar">
         <div>
+          <img src="/assets/favicon" alt="">
           {{#if user}}
           <p>Welcome {{user.name}}</p>
           {{/if}}
         </div>
         <ul>
           <li><a href="{{ auth_url }}">{{ auth }}</a></li>
-          <li><a href="/">HOME</a></li>
-          <li><a href="/about">ABOUT US</a></li>
-          <li><a href="/contact">CONTACT US</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="/about">About us</a></li>
+          <li><a href="/contact">Contact us</a></li>
         </ul>
       </div>
       <div class="text-box">
@@ -32,26 +34,26 @@
     </section>
     <!------ Courses ------->
     <section class="course">
-      <h1><em>Fields that interest you</em></h1>
+      <h1>Fields that interest you</h1>
       <div class="row">
         <div class="course-col">
           <a
             href="women.html"
-            style="font-family: Arial; color: black; font-size: large"
-            ><b>WOMEN EMPOWERMENT</b></a
+            style="color: black; font-size: large"
+            ><b>HEALTH</b></a
           >
         </div>
         <div class="course-col">
           <a
             href="education.html"
-            style="font-family: Arial; color: black; font-size: large"
+            style="color: black; font-size: large"
             ><b>EDUCATION</b></a
           >
         </div>
         <div class="course-col">
           <a
             href="women.html"
-            style="font-family: Arial; color: black; font-size: large"
+            style="color: black; font-size: large"
             ><b>CHILDREN</b></a
           >
         </div>
@@ -145,7 +147,7 @@
     <!----call to action---->
     <section class="cta">
       <h1>To upload adds or know more about our website</h1>
-      <a href="" class="hero-btn">CONTACT US</a>
+      <a href="" class="hero-btn">Contact us</a>
     </section>
     <!----Footer---->
     <section class="footer">
