--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,20 +4,19 @@
   font-family: 'Poppins', sans-serif;
 }
 
+body{
+  overflow-x: hidden;
+}
+
 .header {
   min-height: 100vh;
   width: 100%;
   background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)),
-    url(https://imgs.search.brave.com/lYyhDJ0Zf68J1YnB04g21VWoYVuMXAdtfk_OVgk__4c/rs:fit:1200:1200:1/g:ce/aHR0cHM6Ly93d3cu/c3R1ZGlvc3dhcmNo/LmNvbS93cC1jb250/ZW50L3VwbG9hZHMv/MjAxNy8wNi9maXJl/dHJhaW4tMDQuanBn);
+    url(https://plus.unsplash.com/premium_photo-1664300347812-00e2b09646c5?q=80&w=1816&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
   background-position: center;
   background-size: cover;
   position: relative;
 }
-/* #nav{
-  padding: 2% 6% 0% 6%;
-  justify-content: space-between;
-  align-items: center;
-} */
 #navbar {
   display: flex;
   justify-content: space-between;
@@ -27,19 +26,33 @@
 
 #navbar>div:nth-child(1)>p{
   color: white;
-  text-transform: uppercase;
+  text-transform: capitalize;
 }
-#navbar ul li {
+
+#navbar>div:nth-child(1){
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  width: 30%;
+}
+
+#navbar img{
+  display: block;
+  width: 15%;
+  margin: 0% 10% -3% 0%;
+}
+
+#navbar ul li{
   list-style: none;
   display: inline-block;
-  padding: 30px 12px;
+  padding: 30px 20px;
   position: relative;
 }
 #navbar ul li a {
-  color: aqua;
+  color: white;
   text-decoration: none;
   font-size: 25px;
-  text-transform: uppercase;
+  text-transform: capitalize;
 }
 #navbar ul li::after{
   content: '';
@@ -65,12 +78,17 @@
 .text-box h1 {
   font-size: 67px;
   color: lightblue;
+  /* border: 1px solid; */
+  /* margin: 0px; */
+  padding: 0px;
 }
 .text-box p {
-  margin: 30px 0 40px;
+  /* border: 1px solid; */
+  margin-bottom: 5%;
+  padding: 1px;
   font-size: 20px;
   color: #f0f0f0;
-  font-weight: bold;
+  font-weight:lighter;
 }
 .hero-btn {
   display: inline-block;
@@ -82,12 +100,13 @@
   background: transparent;
   position: relative;
   cursor: pointer;
+  transition: 0.5s;
 }
 
 .hero-btn:hover {
   border: 1px solid #f44336;
   background: #f44336;
-  transition: ls;
+  transition: 0.5s;
 }
 @media (max-width: 700px) {
   .text-box h1 {
@@ -130,6 +149,11 @@ p {
   line-height: 22px;
   padding: 10px;
 }
+
+a {
+  text-decoration: none;
+}
+
 .row {
   margin-top: 5%;
   display: flex;
@@ -143,6 +167,7 @@ p {
   padding: 20px 12px;
   box-sizing: border-box;
   transition: 0.5s;
+  cursor: pointer;
 }
 h3 {
   text-align: center;
@@ -150,7 +175,8 @@ h3 {
   margin: 10px 0;
 }
 .course-col:hover {
-  box-shadow: 0 0 50px 0px rgba(0, 0, 0, 0.5);
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  scale: 1.02;
 }
 .campus {
   width: 80%;
@@ -164,6 +190,7 @@ h3 {
   margin-bottom: 10px;
   position: relative;
   overflow: hidden;
+  cursor: pointer;
 }
 .campus-col-a {
   flex-basis: 32%;
@@ -171,6 +198,7 @@ h3 {
   margin-bottom: 10px;
   position: relative;
   overflow: hidden;
+  cursor: pointer;
 }
 .campus-col-a img {
   width: 100%;
@@ -344,7 +372,7 @@ h3 {
  font-size: 15px;
  padding: 30px 20px;
 }
-/*--------ABOUT US-------*/
+/*--------About us-------*/
 .sub-header{
   height: 50vh;
   width: 100%;
