--- a/views/aboutus.hbs
+++ b/views/aboutus.hbs
@@ -14,12 +14,12 @@
         </div>
         <ul>
           <li><a href="{{ auth_url }}">{{ auth }}</a></li>
-          <li><a href="/">HOME</a></li>
-          <li><a href="/about">ABOUT US</a></li>
-          <li><a href="/contact">CONTACT US</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="/about">About us</a></li>
+          <li><a href="/contact">Contact us</a></li>
         </ul>
       </div>
-        <h1>ABOUT US</h1>
+        <h1>About us</h1>
       </section>
     <section class="about-us">
         <div class="row">
