--- a/views/aboutus.hbs
+++ b/views/aboutus.hbs
@@ -26,10 +26,10 @@
             <div class="about-col">
                <h1>About our Website</h1>
                <p>Our website aims to connect volunteers with NGO's and has been successful in connecting NGO's with harworking and like minded individuals who truly seek to make a difference to the society.</p>
-               <a href="" class="hero-btn  red-btn">EXPLORE NOW</a><br>
+               <a href="/" class="hero-btn  red-btn">EXPLORE NOW</a><br>
             </div>
             <div class="about-col">
-            <img class="image1" src="">
+              <img class="image1" src="/assets/favicon">
             </div>
         </div>
     </section>
@@ -42,7 +42,7 @@
         <i class="fa-brands fa-discord"></i>
         <i class="fa-brands fa-linkedin-in"></i>
         </div>
-    <p>Made by YR-I-133</p>
+    <p>Made by Innovators</p>
     </section>
     </body>
     </html>
