--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -77,7 +77,7 @@
     <i class="fa-brands fa-discord"></i>
     <i class="fa-brands fa-linkedin-in"></i>
     </div>
-<p>Made by YR-I-133</p>
+<p>Made by Innovators</p>
 </section>
 </body>
 </html>
