--- a/views/index.hbs
+++ b/views/index.hbs
@@ -38,14 +38,13 @@
       <div class="row">
         <div class="course-col">
           <a
-            href="women.html"
+            href="/all"
             style="color: black; font-size: large"
-            ><b>HEALTH</b></a
-          >
+            ><b>All</b></a>
         </div>
         <div class="course-col">
           <a
-            href="education.html"
+            href="/all"
             style="color: black; font-size: large"
             ><b>EDUCATION</b></a
           >
@@ -146,8 +145,8 @@
     </section>
     <!----call to action---->
     <section class="cta">
-      <h1>To upload adds or know more about our website</h1>
-      <a href="" class="hero-btn">Contact us</a>
+      <h1>To know more about our website</h1>
+      <a href="/contact" class="hero-btn">Contact us</a>
     </section>
     <!----Footer---->
     <section class="footer">
@@ -158,7 +157,7 @@
         <i class="fa-brands fa-discord"></i>
         <i class="fa-brands fa-linkedin-in"></i>
       </div>
-      <p>Made by YR-I-133</p>
+      <p>Made by Innovators</p>
     </section>
   </body>
 </html>
